data/all_generated_tests/raw_wast_tests/br_table_StackCorruption_2110.wast
;; 10. **Default Label Type Mismatch with Operand:**     - Create a `br_table` instruction where the types in the default label do not match the operand taken from the stack, identifying any inconsistencies or stack issues arising from this setup.

(assert_invalid
  (module (func $default-label-type-mismatch
    (block (block (result i32) (br_table 0 1 (i32.const 0)) (nop)))
  ))
  "type mismatch"
)